	  applied by: Bas van der Vlies

	- Updated the header files for pbs_python. So it can use some new 
	  defines variables/defines, eg:
		* ATTR_NODE_status
		* ATTR_NODE_note
		* ...
	  Added by: Dennis Stam <dennis.stam@sara.nl>, Bas van der Vlies

	- Two new functions to log.h:
		log_roll(int size);
		log_size(void);
	  Added by: Bas van der Vlies

=========== Version 2.9.4
	-  Function pbs.pbs_geterrmsg does not exits any more is
	   replaced by pbs.error():
                errno, text = pbs.error()
		print errno, text
	   Reported by: pk at q-leap dot com
	   Fixed by   : Bas van der Vlies

	- PBSQuery.py
	   * Added get_version() for server class, returns the version of 
	     the batch server
	     Added by    : Bas van der Vlies

	   * Added get_nodes() for job class, returns a list of nodes on 
	     which the job is run
	     Added by    : Bas van der Vlies

	   * PBSQuery.py rewrite make use of UserDict module.
	     Suggested by: Ramon Bastiaans
	     Fixed by    : Bas van der Vlies

=========== Version 2.9.2
	- The function pbs_rescquery() did not work. Fixed it
	- The function avail(), did not work fixed it
	- The functions pbs_rescreserve and pbs_rescrelease did not work
	  fixed it

	- Fixed a bug in new_rack_pbsmon.py. Counting of serial
	  nodes was wrong and state down has topmost priority

=========== Version 2.9.0
	- Added support for new torque build system 2.1.0
	- Added new_rack_pbsmon.py
	  Authors: Walter de Jong & Bas van der Vlies

=========== Version 2.8.2

Configure has a new option:
	--with-pbsdir=PATH

If set it will use PATH specified as argument to
find the pbs/torque libraries. If unset it will use
some useful defaults to find the libaries.
Suggested by: Troy Baer

PBSQuery.py:
	- If we can not make a connection with the server
	  then raise an exception and let the programmer 
	  decides what to do.

pbs_python.spec:
	- It can now handle mode bits
	  Author: Martin Pels from SARA
        
=========== Version 2.8.0

setup.py: