@@ -124,7 +124,9 @@ class PBSQuery:
 		self._free(l)
 	        
 	def _free(self, memory):
-		pbs.pbs_statfree(memory)
+		# Not needed any more
+		#pbs.pbs_statfree(memory)
+		a = 1 
 
 	def _statserver(self, attrib_list=None):
 		"""Get the server config from the pbs server"""
